# livingroomtv

./: .env.template  .gitignore  ISSUES.md  README.md  ROADMAP.md  install.sh  pyproject.toml
mac/LivingRoomTV/: Package.swift
mac/LivingRoomTV/Resources/: Info.plist
mac/LivingRoomTV/Resources/dmg/: background.tiff
mac/LivingRoomTV/Sources/LivingRoomTV/: App.swift  AppsMenu.swift  AskAIField.swift  DebugPanel.swift  LoginItemService.swift  LucideIcon.swift  MainView.swift  NowPlayingCard.swift  OnboardingSheet.swift  RemotePad.swift  SaveAsSceneSheet.swift  SceneCatalog.swift  ScenesRow.swift  SettingsPopover.swift  StatusStore.swift  TVCommandRunner.swift  TVStatus.swift  Theme.swift  TransportRow.swift  VolumeRow.swift
mac/LivingRoomTV/scripts/: build-app.sh  fetch-icons.sh  make-icon.swift  release.sh
src/tv/: __main__.py  agent.py  cli.py  config.py  daemon_lock.py  preferences.py  scenes.py  state.py
src/tv/adapters/: apple_tv.py  lg_tv.py  lg_webos.py
swiftbar/: ask_ai.sh  living_room_tv.15s.py  living_room_tv.stream.py
