[project]
name = "tv"
version = "0.1.0"
description = "Intent-oriented CLI for Apple TV (+ LG later) living-room control"
requires-python = ">=3.11"
dependencies = [
    "pyatv>=0.15.0",
    "typer>=0.12.0",
    "anthropic>=0.45.0",
    "tomli-w>=1.0.0",
    "aiowebostv>=0.4.0",
]

[project.scripts]
tv = "tv.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tv"]
